--- a/1010!/index.html
+++ b/1010!/index.html
@@ -10,18 +10,16 @@
 
 <body>
     <div id="title">
-        <h1><span style="color: #1874CD;">10</span><span style="color: #FFC125;">10</span><span style="color: #CD2626;">!</span></h1>
+        <h1 id="info"><span style="color: #1874CD;">10</span><span style="color: #FFC125;">10</span><span style="color: #CD2626;">!</span></h1>
     </div>
     <div id="table">
     </div>
     <div id="bricks">
     </div>
-    <!-- <div id="drag"></div> -->
     <script type="text/javascript" src="js/object.js"></script>
     <script type="text/javascript" src="js/dict.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript">
-    </script>
+    <script type="
 </body>
 
 </html>
