add phone touch move

--- a/1010!/index.html
+++ b/1010!/index.html
@@ -9,17 +9,18 @@
 </head>
 
 <body>
+    <p id="scoreInfo">得分:<span id="score">0</span></p>
     <div id="title">
-        <h1 id="info"><span style="color: #1874CD;">10</span><span style="color: #FFC125;">10</span><span style="color: #CD2626;">!</span></h1>
+        <h1 id="titleInfo"><span style="color: #1874CD;">10</span><span style="color: #FFC125;">10</span><span style="color: #CD2626;">!</span></h1>
     </div>
     <div id="table">
     </div>
+    <p id="info">作者:<a href="http://snowhere.me">Snowhere</a>.感谢:<a href="http://kinice.top">kinice</a></p>
     <div id="bricks">
     </div>
     <script type="text/javascript" src="js/object.js"></script>
     <script type="text/javascript" src="js/dict.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="
 </body>
 
 </html>
