--- a/1010.html
+++ b/1010.html
@@ -18,9 +18,11 @@
     <p id="info">作者:<a href="http://snowhere.me">Snowhere</a>.感谢:<a href="http://kinice.top">kinice</a></p>
     <div id="bricks">
     </div>
-    <script type="text/javascript" src="js/object.js"></script>
-    <script type="text/javascript" src="js/dict.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script src="http://cdn.bootcss.com/jquery/2.2.4/jquery.js"></script>
+    <script src="js/object.js"></script>
+    <script src="js/dict.js"></script>
+    <script src="js/main.js"></script>
+    <script src="http:////cdn.bootcss.com/layer/2.3/layer.js"></script>
 </body>
 
 </html>
